--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="shortcut icon" href="icon.png">
         <link rel="stylesheet" type="text/css" href="style.css">
-        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Literata">
     </head>
     <body>
         <!-- HEADER -->
@@ -34,6 +33,7 @@
                 <div class="offer1">
                 	<!-- SUBOFFER1 -->
                     <div class="subOffer1">
+                        <img  class="rewards" src="rewards.png"><br>
                         <img class="dollarIMG" src="dollar.png">
                         <img class="offerIMG" src="offer1IMG.png">
                         <button class="cardClaim">Claim Offer</button>
@@ -57,7 +57,7 @@
                                         We want you to know exactly how our service works
                                         and why we need your registration details. Please state that
                                         you have read and agreed to these terms before continue.
-                                    </p> 
+                                    </p>
                                 </div>
                                 <input type="submit" name="submit" value="Submit" class="submitBtn">
                             </form>
@@ -65,12 +65,13 @@
                         </div>
                         <!-- END OF MODAL -->
                     </div>
-                    
+
                 </div>
                 <!-- OFFER2 -->
                 <div class="offer2">
                 	<!-- SUBOFFER2 -->
                     <div class="subOffer2">
+                        <img  class="rewards2" src="rewards.png"><br>
                         <img class="dollarIMG2" src="dollar.png">
                         <img class="offerIMG2" src="offer2IMG.png">
                         <button class="cardClaim2">Claim Offer</button>
@@ -94,7 +95,7 @@
                                         We want you to know exactly how our service works
                                         and why we need your registration details. Please state that
                                         you have read and agreed to these terms before continue.
-                                    </p> 
+                                    </p>
                                 </div>
                                 <input type="submit" name="submit" value="Submit" class="submitBtn">
                             </form>
@@ -107,6 +108,7 @@
                 <div class="offer3">
                 	<!-- SUBOFFER3 -->
                     <div class="subOffer3">
+                        <img  class="rewards3" src="rewards.png"><br>
                         <img class="dollarIMG3" src="dollar.png">
                         <img class="offerIMG3" src="offer3IMG.png">
                         <button class="cardClaim3">Claim Offer</button>
@@ -130,7 +132,7 @@
                                         We want you to know exactly how our service works
                                         and why we need your registration details. Please state that
                                         you have read and agreed to these terms before continue.
-                                    </p> 
+                                    </p>
                                 </div>
                                 <input type="submit" name="submit" value="Submit" class="submitBtn">
                             </form>
@@ -141,7 +143,7 @@
                 </div>
             </div>
         </div>
-        
+
     <script type="text/javascript" src="script.js"></script>
     </body>
 </html>
